# 100for100

./: README.md
1BigBell/: .gitignore  README.md  poopup.bat  poopup.py  requirements.txt
2QuickBar/: README.md  pyproject.toml  run.bat
2QuickBar/src/QuickBar/: __init__.py  __main__.py  app.py  common.py  config.py  hotkey.py  icon.py  manager.py  sidebar.py  storage.py
2QuickBar/src/QuickBar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
